# yc_deploy_function_action

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: deploy.yml  display_secrets.yml  main.yml
example/: code_to_deploy.py  deploy_config.json
yc_autodeploy/: auth.py  dynaconfig.py  function_service.py  main.py  models.py  settings.toml  utils.py
