[tool.poetry]
name = "yc_autodeploy"
version = "0.1.0"
description = ""
authors = ["Denis Shmelev <dshmelev@mnogolososya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.5"
httpx = {extras = ["http2"], version = "^0.19.0"}
PyJWT = "^2.1.0"
cryptography = "^3.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
